# bingx-trading-bot

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  alertmanager.yml  docker-compose.yml  init.sql  prometheus.yml  pyproject.toml  requirements.txt  setup.py
config/: logging.conf  security.py  settings.py
scripts/: backup.sh  install.sh  monitor.sh  restore.sh  start.sh  stop.sh
src/: main.py  version.py
src/bot/: api_client.py  backtester.py  core.py  ml_model.py  monitoring.py  risk_manager.py  signal_generator.py  trading_engine.py
src/data/: backup_manager.py  cache.py  database.py
src/utils/: helpers.py  logger.py  prometheus_metrics.py  security_utils.py
src/web/: app.py  routes.py
src/web/static/css/: style.css
src/web/static/js/: charts.js  dashboard.js
src/web/templates/: base.html  dashboard.html  portfolio.html  settings.html  signals.html
tests/: conftest.py  test_api.py  test_risk.py  test_signals.py  test_web.py
